<resources>
    <string name="app_name">RemindMe</string>
    <string name="name">Name</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_password">Passwort</string>
    <string name="login">Login</string>
    <string name="no_account_yet">Du hast noch keinen Account?</string>
    <string name="to_registration">Zur Registrierung</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="register">Registrieren</string>
    <string name="already_have_account">Du hast bereits einen Account?</string>
    <string name="to_login">Zum Login</string>
    <string name="invalid_login">Passwort oder Benutzername ist falsch</string>
    <string name="passwords_do_not_match">Die Passwörter stimmen nicht überein</string>
    <string name="username_already_taken">Dieser Benutzername ist bereits in Verwendung</string>
    <string name="name_has_to_be_given">Der Name muss angegeben werden</string>
    <string name="reminder">Erinnerung</string>
    <string name="birthdate">Geburtstag</string>
    <string name="male">männlich</string>
    <string name="female">weiblich</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="example_date">01.01.2000</string>
</resources>
