<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Editor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/reminder"
        android:textColor="@color/primary"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <EditText
        android:id="@+id/editor_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="8dp"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:inputType="textPersonName"
        android:background="@drawable/bottom_line"
        android:hint="@string/name" />

    <TextView
        android:id="@+id/editor_et_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="8dp"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="20dp"
        android:onClick="onChooseBirthdate"
        android:background="@drawable/bottom_line"
        android:text="@string/example_date" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textAllCaps="true"
            android:textColor="@color/medium"
            android:checked="true"
            android:fontFamily="@font/roboto"
            android:id="@+id/editor_rb_male" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textAllCaps="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/medium"
            android:fontFamily="@font/roboto"
            android:id="@+id/editor_rb_female" />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:background="#48BB57"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:onClick="onSaveReminder"
        android:fontFamily="@font/roboto" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:background="#DB3529"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:onClick="onCancelReminder"
        android:fontFamily="@font/roboto" />

</LinearLayout>