<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />
    </TableRow>

    <TableRow android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/londrina"
            android:paddingVertical="20dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="45sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow android:layout_weight="1"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/placeholder_username"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:textColor="@color/dark"
                android:background="@drawable/bottom_line"
                android:textColorHint="@color/light"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:textColor="@color/dark"
                android:background="@drawable/bottom_line"
                android:textColorHint="@color/light"
                android:layout_marginTop="20dp"
                android:textSize="17sp" />

            <Button
                android:id="@+id/login_bt_login"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/roboto"
                android:padding="0dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account_yet"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="12sp" />

            <TextView
                android:id="@+id/login_tv_to_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_registration"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

    </TableRow>

</TableLayout>